menuOutputs/menu8
Last login: Sun Nov 11 10:59:57 on ttys000
ucrwpa-1-1-10-25-1-255:~ danialbeg$ python /Users/danialbeg/Documents/pyTest.py --image /Users/danialbeg/Documents/image.png 
Traceback (most recent call last):
  File "/Users/danialbeg/Documents/pyTest.py", line 6, in <module>
    import pyrebase
  File "/anaconda2/lib/python2.7/site-packages/pyrebase/__init__.py", line 1, in <module>
    from .pyrebase import initialize_app
  File "/anaconda2/lib/python2.7/site-packages/pyrebase/pyrebase.py", line 23, in <module>
    from Crypto.PublicKey import RSA
  File "/anaconda2/lib/python2.7/site-packages/Crypto/PublicKey/__init__.py", line 29, in <module>
    from Crypto.Util.asn1 import (DerSequence, DerInteger, DerBitString,
ImportError: cannot import name DerBitString
ucrwpa-1-1-10-25-1-255:~ danialbeg$ python3 /Users/danialbeg/Documents/pyTest.py  --image /Users/danialbeg/Documents/image.png 
Traceback (most recent call last):
  File "/Users/danialbeg/Documents/pyTest.py", line 6, in <module>
    import pyrebase
ModuleNotFoundError: No module named 'pyrebase'
ucrwpa-1-1-10-25-1-255:~ danialbeg$ sudo install pyrebase
Password:
usage: install [-bCcpSsv] [-B suffix] [-f flags] [-g group] [-m mode]
               [-o owner] file1 file2
       install [-bCcpSsv] [-B suffix] [-f flags] [-g group] [-m mode]
               [-o owner] file1 ... fileN directory
       install -d [-v] [-g group] [-m mode] [-o owner] directory ...
ucrwpa-1-1-10-25-1-255:~ danialbeg$ brew install pyrebase
Updating Homebrew...
==> Auto-updated Homebrew!
Updated 1 tap (homebrew/core).
==> Updated Formulae
libpq           mariadb@10.1    meson           mkvtoolnix      xonsh

Error: No available formula with the name "pyrebase" 
==> Searching for a previously deleted formula (in the last month)...
Warning: homebrew/core is shallow clone. To get complete history run:
  git -C "$(brew --repo homebrew/core)" fetch --unshallow

Error: No previously deleted formula found.
==> Searching for similarly named formulae...
Error: No similarly named formulae found.
==> Searching taps...
==> Searching taps on GitHub...
Error: No formulae found in taps.
ucrwpa-1-1-10-25-1-255:~ danialbeg$ pip3 install pyrebase
Collecting pyrebase
  Downloading https://files.pythonhosted.org/packages/4e/1f/86ec68bfe0d6ffeadbab2ab0651ddf1c7206a0c4421b39baeb69b3a9c5cd/Pyrebase-3.0.27-py3-none-any.whl
Collecting python-jwt==2.0.1 (from pyrebase)
  Downloading https://files.pythonhosted.org/packages/dd/2a/9c4230b09f63737e7beb34e3a19895cd50c5ff88af16d3cd54cd71e2325a/python_jwt-2.0.1-py2.py3-none-any.whl
Collecting requests==2.11.1 (from pyrebase)
  Downloading https://files.pythonhosted.org/packages/ea/03/92d3278bf8287c5caa07dbd9ea139027d5a3592b0f4d14abf072f890fab2/requests-2.11.1-py2.py3-none-any.whl (514kB)
    100% |████████████████████████████████| 522kB 10.5MB/s 
Collecting requests-toolbelt==0.7.0 (from pyrebase)
  Downloading https://files.pythonhosted.org/packages/57/60/cc85ca45c85585191e70e21687aeaa74ec4e555a1404628ba77b8af7d92e/requests_toolbelt-0.7.0-py2.py3-none-any.whl (52kB)
    100% |████████████████████████████████| 61kB 20.9MB/s 
Collecting gcloud==0.17.0 (from pyrebase)
  Downloading https://files.pythonhosted.org/packages/0f/9d/56ecba02b4c117a43a906098095bccaea94d3edf57cb407c071efd87002f/gcloud-0.17.0.tar.gz (458kB)
    100% |████████████████████████████████| 460kB 8.1MB/s 
Collecting pycryptodome==3.4.3 (from pyrebase)
  Downloading https://files.pythonhosted.org/packages/45/ef/4514a01be3d8f5383cd12fc5612ffd8a2508ac7e7ff6bde2da708e71c9a3/pycryptodome-3.4.3.tar.gz (6.5MB)
    100% |████████████████████████████████| 6.5MB 5.8MB/s 
Collecting oauth2client==3.0.0 (from pyrebase)
  Downloading https://files.pythonhosted.org/packages/c0/7b/bc893e35d6ca46a72faa4b9eaac25c687ce60e1fbe978993fe2de1b0ff0d/oauth2client-3.0.0.tar.gz (77kB)
    100% |████████████████████████████████| 81kB 23.5MB/s 
Collecting jws>=0.1.3 (from python-jwt==2.0.1->pyrebase)
  Downloading https://files.pythonhosted.org/packages/01/9e/1536d578ed50f5fe8196310ddcc921a3cd8e973312d60ac74488b805d395/jws-0.1.3.tar.gz
Collecting httplib2>=0.9.1 (from gcloud==0.17.0->pyrebase)
  Downloading https://files.pythonhosted.org/packages/fd/ce/aa4a385e3e9fd351737fd2b07edaa56e7a730448465aceda6b35086a0d9b/httplib2-0.11.3.tar.gz (215kB)
    100% |████████████████████████████████| 225kB 19.7MB/s 
Collecting googleapis-common-protos (from gcloud==0.17.0->pyrebase)
  Downloading https://files.pythonhosted.org/packages/ae/94/a256572abf5d10347301c638d5df552fab1515497270726e6b56698d2e99/googleapis-common-protos-1.5.5.tar.gz
Collecting protobuf!=3.0.0.b2.post1,>=3.0.0b2 (from gcloud==0.17.0->pyrebase)
  Downloading https://files.pythonhosted.org/packages/18/e7/785830a65d1f1faba7dccfa8314f7afded1db8cc2860218226ba4b3f6150/protobuf-3.6.1-cp37-cp37m-macosx_10_6_intel.macosx_10_9_intel.macosx_10_9_x86_64.macosx_10_10_intel.macosx_10_10_x86_64.whl (1.2MB)
    100% |████████████████████████████████| 1.2MB 8.6MB/s 
Requirement already satisfied: six in /usr/local/lib/python3.7/site-packages (from gcloud==0.17.0->pyrebase) (1.11.0)
Collecting pyasn1>=0.1.7 (from oauth2client==3.0.0->pyrebase)
  Downloading https://files.pythonhosted.org/packages/d1/a1/7790cc85db38daa874f6a2e6308131b9953feb1367f2ae2d1123bb93a9f5/pyasn1-0.4.4-py2.py3-none-any.whl (72kB)
    100% |████████████████████████████████| 81kB 13.6MB/s 
Collecting pyasn1-modules>=0.0.5 (from oauth2client==3.0.0->pyrebase)
  Downloading https://files.pythonhosted.org/packages/19/02/fa63f7ba30a0d7b925ca29d034510fc1ffde53264b71b4155022ddf3ab5d/pyasn1_modules-0.2.2-py2.py3-none-any.whl (62kB)
    100% |████████████████████████████████| 71kB 10.8MB/s 
Collecting rsa>=3.1.4 (from oauth2client==3.0.0->pyrebase)
  Downloading https://files.pythonhosted.org/packages/02/e5/38518af393f7c214357079ce67a317307936896e961e35450b70fad2a9cf/rsa-4.0-py2.py3-none-any.whl
Requirement already satisfied: setuptools in /usr/local/lib/python3.7/site-packages (from protobuf!=3.0.0.b2.post1,>=3.0.0b2->gcloud==0.17.0->pyrebase) (40.5.0)
Building wheels for collected packages: gcloud, pycryptodome, oauth2client, jws, httplib2, googleapis-common-protos
  Running setup.py bdist_wheel for gcloud ... done
  Stored in directory: /Users/danialbeg/Library/Caches/pip/wheels/b9/04/ff/66c87c7e2419fd477f52015468ec5301d9480b6f3896babda4
  Running setup.py bdist_wheel for pycryptodome ... done
  Stored in directory: /Users/danialbeg/Library/Caches/pip/wheels/8f/9d/63/f6aea5612d1682a50b25857b0358e2ecec878a0bc42ba3af4c
  Running setup.py bdist_wheel for oauth2client ... done
  Stored in directory: /Users/danialbeg/Library/Caches/pip/wheels/48/f7/87/b932f09c6335dbcf45d916937105a372ab14f353a9ca431d7d
  Running setup.py bdist_wheel for jws ... done
  Stored in directory: /Users/danialbeg/Library/Caches/pip/wheels/42/66/97/11aed97607cb2379c1d35d02bdc159bcc3918eb0cc20f7eb9a
  Running setup.py bdist_wheel for httplib2 ... done
  Stored in directory: /Users/danialbeg/Library/Caches/pip/wheels/1b/9c/9e/1f6fdb21dbb1fe6a99101d697f12cb8c1fa96c1587df69adba
  Running setup.py bdist_wheel for googleapis-common-protos ... done
  Stored in directory: /Users/danialbeg/Library/Caches/pip/wheels/22/57/2c/fdf1a5d9f14360bd1123c6dbac26eb784eba25223800239a69
Successfully built gcloud pycryptodome oauth2client jws httplib2 googleapis-common-protos
Installing collected packages: jws, python-jwt, requests, requests-toolbelt, httplib2, protobuf, googleapis-common-protos, pyasn1, pyasn1-modules, rsa, oauth2client, gcloud, pycryptodome, pyrebase
Successfully installed gcloud-0.17.0 googleapis-common-protos-1.5.5 httplib2-0.11.3 jws-0.1.3 oauth2client-3.0.0 protobuf-3.6.1 pyasn1-0.4.4 pyasn1-modules-0.2.2 pycryptodome-3.4.3 pyrebase-3.0.27 python-jwt-2.0.1 requests-2.11.1 requests-toolbelt-0.7.0 rsa-4.0
ucrwpa-1-1-10-25-1-255:~ danialbeg$ python3 /Users/danialbeg/Documents/pyTest.py  --image /Users/danialbeg/Documents/image.png 
{'image': '/Users/danialbeg/Documents/image.png', 'preprocess': 'thresh'}
De

[MENU TITLE]

Starter
Ist

 

 

Dessert
eset en 1}
ucrwpa-1-1-10-25-1-255:~ danialbeg$ python3 /Users/danialbeg/Documents/pyTest.py  --image /Users/danialbeg/Documents/image.png 
{'image': '/Users/danialbeg/Documents/image.png', 'preprocess': 'thresh'}
De

[MENU TITLE]

Starter
Ist

 

 

Dessert
eset en 1}
ucrwpa-1-1-10-25-1-255:~ danialbeg$ python3 /Users/danialbeg/Documents/pyTest.py --image /Users/danialbeg/Desktop/image.png 
  File "/Users/danialbeg/Documents/pyTest.py", line 63
    for (item : foodList)
              ^
SyntaxError: invalid syntax
ucrwpa-1-1-10-25-1-255:~ danialbeg$ python3 /Users/danialbeg/Documents/pyTest.py --image /Users/danialbeg/Desktop/menu8.png 
  File "/Users/danialbeg/Documents/pyTest.py", line 63
    for (item : foodList)
              ^
SyntaxError: invalid syntax
ucrwpa-1-1-10-25-1-255:~ danialbeg$ python3 /Users/danialbeg/Documents/ocr.py --image /Users/danialbeg/Desktop/menu8.png 
  File "/Users/danialbeg/Documents/ocr.py", line 1
    Skip to content
          ^
SyntaxError: invalid syntax
ucrwpa-1-1-10-25-1-255:~ danialbeg$ python3 /Users/danialbeg/Documents/ocr.py --image /Users/danialbeg/Desktop/menu8.png 
<pyrebase.pyrebase.Firebase object at 0x1054246a0>
{'image': '/Users/danialbeg/Desktop/menu8.png', 'preprocess': 'thresh'}
Cheese Burger
$10

Hamburger
$7

Chicken Sandwich
$9
Type your input: 
